icono de la app

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,169 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:width="200dp"
+    android:height="200dp"
+    android:viewportWidth="300"
+    android:viewportHeight="300">
+
     <path
-        android:fillColor="#FFFFFF"
+        android:fillColor="#371315"
         android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M114.51,109.86L140.14,149.36L92.73,170.54L80.42,151.62L114.51,109.86Z"
+        android:strokeWidth="1.27"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
+
+    <path
+        android:fillColor="#371315"
+        android:fillType="nonZero"
+        android:pathData="M186.04,109.86L160.4,149.36L207.81,170.54L220.13,151.62L186.04,109.86Z"
+        android:strokeWidth="1.27"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
+
+    <path
+        android:fillColor="#D0915E"
+        android:fillType="nonZero"
+        android:pathData="M228.47,299.99C219,255.82 204.23,226.74 204.23,226.74C204.23,226.74 215.31,219.22 217.87,213.14C220.42,207.05 213.56,172.32 204.23,161.59C194.89,150.85 169,149 150.28,149C131.56,149 105.65,150.85 96.32,161.59C86.98,172.32 80.12,207.05 82.69,213.14C85.25,219.22 96.32,226.74 96.32,226.74C96.32,226.74 63.5,291.33 64.35,374.25C96.07,382.52 129.67,379.66 159.54,366.15C189.41,352.63 213.74,329.28 228.47,299.99Z"
+        android:strokeWidth="1.27"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
+
+    <path
+        android:fillColor="#AD7041"
+        android:fillType="nonZero"
+        android:pathData="M178.76,202.62C195.88,211.51 209.65,208.54 218.22,204.41C217.02,191.62 211.36,169.71 204.25,161.58C196.21,152.34 175.89,149.69 158.44,149.13C156.81,161.69 155.9,190.68 178.76,202.62Z"
+        android:strokeWidth="1.27"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
+
+    <path
+        android:fillColor="#AD7041"
+        android:fillType="nonZero"
+        android:pathData="M64.35,373.51C64.35,374.1 64.18,374.21 64.82,374.36C65.26,374.49 65.72,374.6 66.17,374.7C67.08,374.93 67.98,375.15 68.9,375.35C70.89,375.81 72.88,376.23 74.88,376.62C78.76,377.33 82.69,377.89 86.63,378.26C94.71,379.05 102.84,379.15 110.93,378.55C112.88,378.41 114.82,378.23 116.76,378.01C117.51,377.93 118.91,378.01 119.4,377.44C119.9,376.86 120.51,376.08 121.06,375.39C123.03,372.83 124.86,370.16 126.52,367.39C130.01,361.58 132.7,355.33 134.52,348.81C138.48,334.79 137.3,319.82 131.16,306.61C126.24,296.15 118.72,287.13 109.32,280.41C102.36,275.46 94.64,271.68 86.46,269.23C85.05,268.8 83.64,268.4 82.21,268.06L80.52,267.67C79.92,269.6 79.32,271.54 78.76,273.5C76.49,281.24 74.47,289.05 72.72,296.93C67.01,322.07 64.18,347.78 64.3,373.56L64.35,373.51Z"
+        android:strokeWidth="1.27"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
+
+    <path
+        android:fillColor="#AD7041"
+        android:fillType="nonZero"
+        android:pathData="M228.29,299.43C224.17,280.2 218.48,261.34 211.29,243.03C204.94,248.37 201.64,256.3 200.67,264.38C199.15,277.16 202.18,291.56 209.73,302.11C212.25,305.67 215.37,308.77 218.96,311.26C219.37,311.53 219.79,311.8 220.23,312.07C220.67,312.34 221.09,312.89 221.5,312.26C222.36,310.9 223.2,309.52 224.04,308.12C224.88,306.72 225.65,305.31 226.43,303.89C227.02,302.72 228.62,300.74 228.29,299.43Z"
+        android:strokeWidth="1.27"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
+
+    <path
+        android:fillColor="#AD7041"
+        android:fillType="nonZero"
+        android:pathData="M80.42,151.62C78.71,147.37 109.82,108.78 114.51,109.86C119.21,110.94 127.13,160.33 123.77,165.17C120.42,170 85.5,164.34 80.42,151.62Z"
+        android:strokeWidth="1.27"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
+
+    <path
+        android:fillColor="#D0915E"
+        android:fillType="nonZero"
+        android:pathData="M220.13,151.62C221.83,147.37 190.74,108.78 186.04,109.86C181.34,110.94 173.42,160.33 176.77,165.17C180.12,170.01 215.05,164.34 220.13,151.62Z"
+        android:strokeWidth="1.27"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
+
+    <path
+        android:fillColor="#3A130E"
+        android:fillType="nonZero"
+        android:pathData="M118.82,196.04C121.6,196.04 123.85,193.31 123.85,189.93C123.85,186.56 121.6,183.82 118.82,183.82C116.04,183.82 113.79,186.56 113.79,189.93C113.79,193.31 116.04,196.04 118.82,196.04Z"
+        android:strokeWidth="1.27"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
+
+    <path
+        android:fillColor="#231012"
+        android:fillType="nonZero"
+        android:pathData="M118.82,196.04C121.6,196.04 123.9,193.3 123.9,189.93C123.9,188.95 123.7,187.98 123.32,187.07L114.11,191.93C114.34,193.03 114.93,194.03 115.78,194.77C116.63,195.51 117.7,195.96 118.82,196.04Z"
+        android:strokeWidth="1.27"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
+
+    <path
+        android:fillColor="#EFF6FE"
+        android:fillType="nonZero"
+        android:pathData="M117.96,189.31C117.96,190.58 117.47,191.56 116.88,191.56C116.28,191.56 115.8,190.55 115.8,189.31C115.8,188.07 116.28,187.07 116.88,187.07C117.47,187.07 117.96,188.08 117.96,189.31Z"
+        android:strokeWidth="1.27"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
+
+    <path
+        android:fillColor="#3A130E"
+        android:fillType="nonZero"
+        android:pathData="M186.77,189.93C186.77,193.3 184.5,196.04 181.69,196.04C178.87,196.04 176.61,193.3 176.61,189.93C176.61,186.57 178.85,183.82 181.69,183.82C184.52,183.82 186.77,186.55 186.77,189.93Z"
+        android:strokeWidth="1.27"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
+
+    <path
+        android:fillColor="#231012"
+        android:fillType="nonZero"
+        android:pathData="M181.72,196.04C184.5,196.04 186.8,193.3 186.8,189.93C186.8,188.95 186.61,187.98 186.22,187.07L177.01,191.93C177.25,193.03 177.83,194.03 178.68,194.77C179.53,195.51 180.6,195.96 181.72,196.04Z"
+        android:strokeWidth="1.27"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
+
+    <path
+        android:fillColor="#EFF6FE"
+        android:fillType="nonZero"
+        android:pathData="M180.86,189.31C180.86,190.58 180.38,191.56 179.78,191.56C179.18,191.56 178.7,190.55 178.7,189.31C178.7,188.07 179.18,187.07 179.78,187.07C180.38,187.07 180.86,188.08 180.86,189.31Z"
+        android:strokeWidth="1.27"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
+
+    <path
+        android:fillColor="#F49A8E"
+        android:fillType="nonZero"
+        android:pathData="M150.28,202.62C150.15,204.82 149.31,206.93 147.88,208.61C146.45,210.29 144.5,211.45 142.34,211.92L142.34,224.21C142.34,226.31 143.18,228.33 144.67,229.82C146.15,231.31 148.17,232.15 150.28,232.15C152.38,232.15 154.4,231.31 155.89,229.82C157.38,228.33 158.22,226.31 158.22,224.21L158.22,211.92C156.06,211.45 154.11,210.29 152.67,208.61C151.24,206.93 150.4,204.83 150.28,202.62Z"
+        android:strokeWidth="1.27"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
+
+    <path
+        android:fillColor="#00000000"
+        android:fillType="nonZero"
+        android:pathData="M150.28,202.61L150.28,221.54"
+        android:strokeWidth="1.27"
+        android:strokeColor="#E27169"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
+
+    <path
+        android:fillColor="#231012"
+        android:fillType="nonZero"
+        android:pathData="M150.28,185.35C141.98,185.35 129.18,187.2 129.5,191.82C129.82,196.45 140.93,201.69 150.28,202.62C159.55,201.69 170.75,196.45 171.06,191.82C171.36,187.2 158.57,185.35 150.28,185.35Z"
+        android:strokeWidth="1.27"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
+
+    <path
+        android:fillColor="#00000000"
+        android:fillType="nonZero"
+        android:pathData="M173.47,203.95C173.47,203.95 172.8,212.28 161.66,212.28C150.52,212.28 150.23,202.62 150.23,202.62C150.23,202.62 149.99,212.28 138.8,212.28C127.61,212.28 126.99,203.95 126.99,203.95"
+        android:strokeWidth="1.27"
+        android:strokeColor="#231012"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
+
 </vector>
